--- a/springboot2-postgresql-jpa-hibernate-crud-example/Dockerfile
+++ b/springboot2-postgresql-jpa-hibernate-crud-example/Dockerfile
@@ -1,20 +1,10 @@
-# Start with a base image containing Java runtime
 FROM openjdk:8-jdk-alpine
-
-# Add Maintainer Info
-LABEL maintainer="vina.maghdalena@itgroupinc.asia"
-
-# Add a volume pointing to /tmp
-VOLUME /tmp
-
-# Make port 8080 available to the world outside this container
+RUN mkdir -p /home/java-app-test/
+WORKDIR /home/java-app-test/
+COPY ./target/springboot2-postgresql-jpa-hibernate-crud-example-0.0.1-SNAPSHOT.jar ./
+#COPY ./run.sh ./
+WORKDIR /home/java-app-test/
+#RUN chmod a+x ./run.sh
 EXPOSE 8080
-
-# The application's jar file
-ARG JAR_FILE=target/springboot2-postgresql-jpa-hibernate-crud-example-0.0.1-SNAPSHOT.jar
-
-# Add the application's jar to the container
-ADD ${JAR_FILE} springboot2-postgresql-jpa-hibernate-crud-example-0.0.1-SNAPSHOT.jar
-
-# Run the jar file
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/springboot2-postgresql-jpa-hibernate-crud-example-0.0.1-SNAPSHOT.jar"]
+#CMD ["./run.sh"]
+CMD ["java", "-jar", "./springboot2-postgresql-jpa-hibernate-crud-example-0.0.1-SNAPSHOT.jar"]
