--- a/springboot2-postgresql-jpa-hibernate-crud-example/src/main/resources/application.properties
+++ b/springboot2-postgresql-jpa-hibernate-crud-example/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://${DB_IP}:${PGPORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://172.29.237.5:5444/karyawan
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
